@@ -113,11 +113,12 @@ contains
   subroutine handle_metadata(section,metadata, default)
     use glimmer_ncdf
     use glimmer_config
-    use glimmer_global, only: glimmer_version
     implicit none
     type(ConfigSection), pointer :: section
     type(glimmer_nc_meta) ::metadata
     logical :: default
+    
+    character(len=100), external :: glimmer_version_char
 
     ! local variables
     character(len=8) :: date
@@ -137,9 +138,9 @@ contains
 
     if (default) then
        call date_and_time(date,time)
-       metadata%source = 'Generated by '//trim(glimmer_version)
+       metadata%source = 'Generated by '//trim(glimmer_version_char())
        write(metadata%history,fmt="(a4,'-',a2,'-',a2,' ',a2,':',a2,':',a6,' : ',a)") date(1:4),date(5:6),date(7:8),&
-            time(1:2),time(3:4),time(5:10),trim(glimmer_version)
+            time(1:2),time(3:4),time(5:10),trim(glimmer_version_char())
     else
        metadata%source = trim(default_metadata%source)
        metadata%history = trim(default_metadata%history)
