@@ -4,7 +4,7 @@
 
 OUT=svnversion.sed
 
-echo "s|svn_vers_string|$(svnversion)|" > $OUT.tmp
+echo "s|svn_vers_string|$(svnversion $1)|" > $OUT.tmp
 
 if [ -f $OUT ]; then
   if [ -n "$(diff --brief $OUT $OUT.tmp)" ]; then
