@@ -49,8 +49,6 @@ module glimmer_global
   !*FD Module holding global variables for Glimmer. Holds real-type
   !*FD kind values, and other global code parameters.
 
-  use glimmer_vers
-
   integer,parameter :: sp = kind(1.0) 
   
   !*FD Single precision --- Fortran single-precision real-type kind 
