@@ -40,8 +40,17 @@
 !
 ! +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 
-module glimmer_vers
-  character(len=*), parameter :: glimmer_version = 'GLIMMER v. @GLIMMER_MAJOR_VERSION@.@GLIMMER_MINOR_VERSION@.@GLIMMER_MICRO_VERSION@@GLIMMER_SVN_VERS@'
-  integer,parameter :: glimmer_v_number = 10000*@GLIMMER_MAJOR_VERSION@ + 100*@GLIMMER_MINOR_VERSION@ + @GLIMMER_MICRO_VERSION@
-  !*FD Glimmer version string
-end module glimmer_vers
+
+!> the glimmer version as a string
+function glimmer_version_char()
+  implicit none
+  character(len=100) :: glimmer_version_char = 'GLIMMER v. @GLIMMER_MAJOR_VERSION@.@GLIMMER_MINOR_VERSION@.@GLIMMER_MICRO_VERSION@@GLIMMER_SVN_VERS@'
+end function glimmer_version_char
+
+!> the glimmer version as an integer
+function glimmer_version_int()
+  implicit none
+  integer :: glimmer_version_int = 10000*@GLIMMER_MAJOR_VERSION@ + 100*@GLIMMER_MINOR_VERSION@ + @GLIMMER_MICRO_VERSION@
+end function glimmer_version_int
+
+
